<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashBackground"
    tools:context="com.example.kyle.whatsmypayment.MainActivity">

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="25dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        android:layout_marginBottom="56dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:onClick="onSubmit"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="7dp">

        <LinearLayout
            android:id="@+id/textLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/principal"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/downPayment"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/interest"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingBottom="21dp"
                android:text="@string/duration"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp">

            <EditText
                android:id="@+id/principalInput"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:hint="@string/principalInput"
                android:inputType="numberDecimal"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/paymentInput"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:hint="@string/paymentInput"
                android:inputType="numberDecimal"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/interestInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:hint="@string/interestInput"
                android:inputType="numberDecimal"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/durationInput"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:hint="@string/durationInput"
                android:inputType="number"
                android:paddingBottom="20dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
